--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@
 <link href="src/styles.css" rel="stylesheet" type="text/css" />
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
-<div class="card" id="card">
-  <div class="card-header">
-   Coded by Dynva Zeran
-  </div>
+
   <div class="card-body">
     <h5 class="card-title">
       <i class="fas fa-temperature-low"></i> Today's Weather <i class="fas fa-temperature-high"></i></h5>
@@ -149,7 +146,7 @@
     </div>
   </div>
 
-
+<small><a href="https://github.com/DZeran/DZ-weather" target="_blank">Open-source code</a>, by Dynva F. Zeran</small>
 <script src="src/index.js"></script>
 </body>
 </html>
