--- a/index.html
+++ b/index.html
@@ -147,6 +147,6 @@
   
 
 <small><a href="https://github.com/DZeran/DZ-weather" target="_blank">Open-source code</a>, by Dynva F. Zeran</small>
-<script src="src/index.js"></script>
+<script src="script.js" type="text/javascript"></script>
 </body>
 </html>
