cont. page clean up

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 
-  <div class="card-body" id="this">
+  <div class="container" id="this">
+  <div class="card-body" >
     <h5 class="card-title">
       <i class="fas fa-temperature-low"></i> Today's Weather <i class="fas fa-temperature-high"></i></h5>
     <p class="weather" id="weatherInfo">
@@ -34,6 +35,7 @@
       <div class="weather" 
       id="sunRiseSet">🌅 Sunrise: 6:07 AM
         🌇 Sunset: 8:26 PM
+      </div>
       </div>
   </p>
     
