cont. page clean up
cont. to make page more pleasing to the eye

--- a/index.html
+++ b/index.html
@@ -25,23 +25,22 @@
 </head>
 
   <div class="container" id="this">
-  <div class="card-body" >
-    <h5 class="card-title">
+  <h5 class="card-title">
       <i class="fas fa-temperature-low"></i> Today's Weather <i class="fas fa-temperature-high"></i></h5>
     <p class="weather" id="weatherInfo">
       💧 Precipitation: 81%
       🌬️ Wind: s 20 mph
       ☔ Chance of Rain: 78%
-      <div class="weather" 
-      id="sunRiseSet">🌅 Sunrise: 6:07 AM
-        🌇 Sunset: 8:26 PM
+      <div class="sunRiSet">🌅 Sunrise: 6:07 AM</div>
+      <div class="sunRiSet">🌇 Sunset: 8:26 PM</div>  
       </div>
-      </div>
-  </p>
+      </div>  
+    </p>
+
     
 <body>
     <div class="container">
-        <div class="row-3">
+        <div class="row">
         <div><h1>Wilmington</h1></div>
         <div>
           <h2 id="date"></h2>
