cont. page clean up
cont. to make my page pleasing to the eye

--- a/index.html
+++ b/index.html
@@ -24,15 +24,21 @@
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 
-  <div class="container" id="this">
+  <div class="container" id="weatherInfo">
   <h5 class="card-title">
       <i class="fas fa-temperature-low"></i> Today's Weather <i class="fas fa-temperature-high"></i></h5>
-    <p class="weather" id="weatherInfo">
+    <p>
       💧 Precipitation: 81%
       🌬️ Wind: s 20 mph
       ☔ Chance of Rain: 78%
-      <div class="sunRiSet">🌅 Sunrise: 6:07 AM</div>
-      <div class="sunRiSet">🌇 Sunset: 8:26 PM</div>  
+      <br />
+      <div>🌅 Sunrise: 6:07 AM</div>
+      <div>🌇 Sunset: 8:26 PM</div>  
+      <br />
+      <br />
+      <div> Humidity: 78% </div>
+      <div> Chance of Rain: 88% </div>
+      <div> Air Quailty: 50 <strong> GOOD </strong></div>
       </div>
       </div>  
     </p>
