--- a/index.html
+++ b/index.html
@@ -140,6 +140,6 @@
   
 
 <small><a href="https://github.com/DZeran/DZ-weather" target="_blank">Open-source code</a>, by Dynva F. Zeran</small>
-<script src="src/index.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
