--- a/index.html
+++ b/index.html
@@ -45,14 +45,15 @@
     
 <body>
     <div class="container" id>
-        <div class="row">
+        <div class="row-3">
         <div><h1>Wilmington</h1></div>
         <div>
           <br />
           <h2 id="date"></h2>
-          <span id="currentTemperature">23</span><a href="#" id="celsius-link">°C</a> |
-                  <a href="#" id="fahrenheit-link">°F</a>    
+          <p>
+          <span id="currentTemperature">23</span><a href="#" id="celsius-link">°C |</a><a href="#" id="fahrenheit-link">°F</a>    
           </div>
+        </div>
         </div>
         </div>
   
@@ -67,21 +68,21 @@
                 autofocus="on"
                 autocomplete="off"
                 class="form-control shadow-sm" />
-                <button type="submit" class="btn btn-success btn-search">
+                <button  type="submit" id="button">
                   Search
                 </button>
-                <button id= "currentLocation" type="submit" class="btn btn-success btn-search">
+                <button id= "currentLocation" type="submit" >
                   Current Location
                 </button>
              </div>
 </form>
 
       
-    <div class="container">
-    <div class="row-3">
+    <div class="container"></div>
+    <div class="row-2">
     <div class="col-sm-2"></div>
     <div class="card">
-    <div class="card-body">
+    <div class="card-body" >
     <h5 class="card-title">Monday</h5>                                                                                                                                   
     <h6 class="cloudy"><i class="fas fa-cloud-sun"></i></h6>
     <p><div class="weather"> Mostly Cloudy </div> 
@@ -93,6 +94,7 @@
 </div>
   
 
+    <div class="row-2">
     <div class="col-sm-2"></div>
     <div class="card">
     <div class="card-body">
@@ -105,6 +107,7 @@
   </div>
 
 
+    <div class="row-2">
     <div class="col-sm-2"></div>
     <div class="card">
     <div class="card-body">
@@ -116,6 +119,8 @@
     </div>
 </div>
 
+
+    <div class="row-2">
     <div class="col-sm-2"></div>
     <div class="card">
     <div class="card-body">
@@ -127,6 +132,8 @@
     </div>
 </div>
 
+
+    <div class="row-2">
 <div class="col-sm-2"></div>
     <div class="card">
     <div class="card-body">
@@ -139,8 +146,9 @@
   </div>
 
   
-
+<footer>
 <small><a href="https://github.com/DZeran/DZ-weather" target="_blank">Open-source code</a>, by Dynva F. Zeran</small>
+</footer>
 <script src="index.js"></script>
 </body>
 </html>
