--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div>
           <br />
           <h2 id="date"></h2>
-          <p>
+          <div>
           <span id="currentTemperature">23</span><a href="#" id="celsius-link">°C |</a><a href="#" id="fahrenheit-link">°F</a>    
           </div>
         </div>
