removed current location button

--- a/index.html
+++ b/index.html
@@ -67,13 +67,11 @@
                 placeholder="Enter city. . . "
                 autofocus="on"
                 autocomplete="off"
-                class="form-control shadow-sm" />
-                <button  type="submit" id="button">
+                class="col-3" />
+                <button  type="submit"  id="button">
                   Search
                 </button>
-                <button id= "currentLocation" type="submit" >
-                  Current Location
-                </button>
+               
              </div>
 </form>
 
