--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
-<link rel="stylesheet" href="styles.css" />
+<link rel="stylesheet" href="style.css" />
 
   </head>
     <div class="container">
